--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -10,5 +10,8 @@ jobs:
     name: Validate JSON
     runs-on: ubuntu-latest
     steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
       - name: Validate JSON
         run: jq . bandwidth.json > /dev/null
