make it fail to test

--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v6
 
       - name: Validate JSON
-        run: jq . bandwidth.json > /dev/null
+        run: jq . bandwidh.json > /dev/null
